--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h1 class="card-title text-center mb-4">Quanto Thiago Carvalho (Ovão) perdeu ao sair da Emprel?</h1>
+
+                        <div class="text-center mb-4">
+                            <img src="meme.jpg" alt="Meme de Thiago" class="img-fluid rounded">
+                        </div>
                         
                         <form id="calculo-form">
                             <div class="mb-3">
